--- a/3º Bimestre/Classes/CLASSPessoa/Pessoa.html
+++ b/3º Bimestre/Classes/CLASSPessoa/Pessoa.html
@@ -7,6 +7,12 @@
 
 </head>
 <body>
+    <h2>Cadastrar Carro</h2>
+    <input type="text" id="inputPlaca" placeholder="Digite a placa do carro">
+    <input type="text" id="inputModelo" placeholder="Digite o modelo do carro">
+    <input type="text" id="inputMarca" placeholder="Digite a marca do carro">
+    <input type="number" id="inputAno" placeholder="Digite o ano do carro">
+
     <button onclick="listarPessoas()" >Listar Pessoas</button>
     <span id="pessoas"></span>
 
