--- a/3º Bimestre/Classes/CLASSECarro/carro.html
+++ b/3º Bimestre/Classes/CLASSECarro/carro.html
@@ -14,9 +14,8 @@
     <input type="text" id="inputMarca" placeholder="Digite a marca do carro">
     <input type="number" id="inputAno" placeholder="Digite o ano do carro">
 
-
     <button onclick="adicionarCarroNaLista()">Adicionar Carro</button>
-    <button onclick="MostrarListaDeCarros()">Mostrar Lista</button>
+    <button onclick="mostrarListaDeCarros()">Mostrar Lista</button>
 
     <h3>Carros (vetor heterogêneo):</h3>
     <p id="listaDeCarros">[]</p>
